--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^15.1.7",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-calendar": "^6.0.0",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^19.2.2",
     "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.38.0",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^15.1.7",
     "tailwindcss": "^4.1.15",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
