--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@8.15.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -27,7 +26,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
-    "next": "^15.1.7",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-calendar": "^6.0.0",
@@ -47,9 +46,9 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "baseline-browser-mapping": "^2.9.5",
+    "baseline-browser-mapping": "^2.9.7",
     "eslint": "^9.38.0",
-    "eslint-config-next": "^15.1.7",
+    "eslint-config-next": "16.0.0",
     "tailwindcss": "^4.1.15",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
