--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pmpm@9.15.4",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
