--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
   "framework": "nextjs",
-  "buildCommand": "pnpm run build"
+  "buildCommand": "pnpm run build",
+  "installCommand": "pnpm config set registry https://registry.npmmirror.com && pnpm install"
 }
